name:             vimus
version:          0.0.0
synopsis:         An MPD client with vim-like key bindings
category:         Sound
license:          MIT
license-file:     LICENSE
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Custom
cabal-version:    >= 1.10

data-dir:
    resource
data-files:
    default-mappings
    emacs-mappings

extra-source-files:
  ncursesw/src/mycurses.h

source-repository head
    type:            git
    location:        git://github.com/vimus/vimus.git


executable vimus
  default-language: Haskell2010
  ghc-options:
    -Wall
    -threaded

  build-depends:
      base        >= 4.6
    , wcwidth
    , libmpd      == 0.9.*
    , mtl         >= 2 && < 2.2
    , containers  >= 0.4 && < 0.6
    , deepseq
    , time
    , old-locale
    , process
    , filepath
    , directory
    , data-default
    , template-haskell

    , bytestring
    , utf8-string

  hs-source-dirs:
      src
    , ncursesw/src

  main-is:
    Main.hs

  other-modules:
    Run
    Command
    Command.Type
    Command.Core
    Command.Help
    Command.Completion
    Command.Parser
    Content
    Input
    Key
    Ruler
    Widget.Type
    Widget.TextWidget
    Widget.ListWidget
    Widget.HelpWidget
    Macro
    Option
    PlaybackState
    Queue
    Song
    Song.Format
    Tab
    Timer
    Type
    Util
    Vimus
    Render
    WindowLayout
    Paths_vimus
    Data.List.Pointed
    Data.List.Zipper

    -- ncursesw stuff
    UI.Curses
    UI.Curses.Key
    UI.Curses.Type
    Curses
    Constant
    CursesUtil
    Misc
    CursesInput

  extra-libraries:
    ncursesw

  c-sources:
    ncursesw/src/cbits.c

  includes:
    mycurses.h

  include-dirs:
    ncursesw/src/

test-suite spec
  default-language: Haskell2010
  type:
      exitcode-stdio-1.0
  main-is:
      Spec.hs
  ghc-options:
      -Wall
      -Werror
      -threaded

  cpp-options:
      -DTEST

  hs-source-dirs:
      src
    , test
  build-depends:
      base        >= 4.6
    , wcwidth
    , libmpd      == 0.9.*
    , mtl         >= 2 && < 2.2
    , containers
    , deepseq
    , time
    , old-locale
    , process
    , filepath
    , directory
    , data-default
    , template-haskell

    , hspec >= 1.3
    , hspec-expectations
    , transformers
    , QuickCheck
